<resources>
    <string name="app_name">AICam</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="background">background</string>
    <string name="this_is_photo_is_used_to_test_and_it_is_cooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooool">//TODO Another Attribute</string>
    <string name="loading">Loading</string>
    <string name="NCU">國立中央大學</string>
    <string name="phtoto_load_in">phtoto_load_in</string>
    <string name="camera">Camera</string>
    <string name="score">Score</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="infomation">information</string>
    <string name="i_am_scoreshow">Criticizing...</string>
    <string name="location">location</string>
    <string name="rank_no">#</string>
    <string name="rating_by_yourself">Rating by yourself</string>
    <string name="user">user</string>
    <string name="user_status">user status</string>
    <string name="maybe_you_can_try">Maybe You Can Try...</string>
    <string name="bar">/</string>
    <string name="todo_introduce">//TODO introduce</string>
    <string name="todo_suggestion">//TODO suggestion</string>
    <string name="todo">TODO</string>
    <string name="photo_introduce">This Photo is owned by Savig.com and Instragram, with search location</string>
    <string name="modify_user_name">Modify user name</string>
    <string name="modify_status">Modify status</string>
    <string name="change_profile">Change profile</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="record">Record</string>
    <string name="collection">Collection</string>
    <string name="delete">Delete</string>
    <string name="log_in_ai_camera">Log in to AICam</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="sign_up_to_ai_camera">Sign up to AICam</string>
    <string name="check_password_again">Check password again</string>
    <string name="welecome_to_aicam">Welecome to AICam</string>
    <string name="suggestion">suggestion</string>
    <string name="light_constast"><![CDATA[Suggestions are being processed... ]]></string>
    <string name="title">title</string>
    <string name="test">test</string>
</resources>
