<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_2068"
    android:backgroundTint="#11FFFFFF"
    android:backgroundTintMode="src_over">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@null"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:text="@string/welecome_to_aicam"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_icon" />

    <Button
        android:id="@+id/bn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/shape_capsule"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:paddingEnd="60dp"
        android:paddingStart="60dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bn_signup" />

    <Button
        android:id="@+id/bn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_capsule"

        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:paddingEnd="60dp"
        android:paddingStart="60dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>