<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:orientation="vertical"
    app:cardBackgroundColor="#0F000000"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true"
    app:contentPaddingBottom="40dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date"
                style="@style/NormalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="5dp"
                android:text="@string/rank_no"
                android:textSize="28sp"
                android:textStyle="bold" />
            <ImageButton
                android:id="@+id/ib_award"
                style="@style/SmallGreyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:background="@null"
                android:contentDescription="@string/this_is_photo_is_used_to_test_and_it_is_cooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooool"
                android:paddingTop="5dp"
                android:src="@drawable/golden32" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="2dp">

                <TextView
                    android:id="@+id/tv_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/location"
                    android:textSize="25sp"
                    android:visibility="visible" />

            </LinearLayout>
            <ImageButton
                android:id="@+id/ib_camera"
                style="@style/SmallGreyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:background="@null"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/this_is_photo_is_used_to_test_and_it_is_cooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooool"
                android:cropToPadding="false"
                android:src="@drawable/camera_black32"
                />
        </LinearLayout>

        <pl.droidsonroids.gif.GifImageButton
            android:id="@+id/ib_image"
            style="@style/SmallGreyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:background="@null"
            android:contentDescription="@string/this_is_photo_is_used_to_test_and_it_is_cooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooool"
            android:cropToPadding="false"
            android:src="@drawable/loading100" />
    </LinearLayout>

</android.support.v7.widget.CardView>