<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true"
    app:contentPadding="6dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <pl.droidsonroids.gif.GifImageButton
            android:id="@+id/ib_image"
            style="@style/SmallGreyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:background="@null"
            android:contentDescription="@string/this_is_photo_is_used_to_test_and_it_is_cooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooool"
            android:cropToPadding="false"
            android:src="@drawable/loading100"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="#88000000">
            <TextView
                android:id="@+id/tv_date"
                style="@style/NormalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/rank_no"
                android:textColor="@color/background"
                android:textSize="28sp"
                android:textStyle="bold"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>
            <ImageButton
                android:id="@+id/ib_award"
                style="@style/SmallGreyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:background="@null"
                android:paddingTop="5dp"
                android:contentDescription="@string/this_is_photo_is_used_to_test_and_it_is_cooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooool"
                android:cropToPadding="false"
                android:src="@drawable/normal32" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="5dp">

                <TextView
                    android:id="@+id/tv_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/location"
                    android:textColor="@color/background"
                    android:textSize="25sp" />
            </LinearLayout>
            <ImageButton
                android:id="@+id/ib_camera"
                style="@style/SmallGreyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:background="@null"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/this_is_photo_is_used_to_test_and_it_is_cooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooool"
                android:cropToPadding="false"
                android:src="@drawable/camera32"
                android:paddingBottom="5dp"
                />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>